# ExamenesPoo

./: README.md
InteLigA_ptoPartida/: CMakeLists.txt  Dron.cpp  Dron.h  Paquete.cpp  Paquete.h  TorreDeControl.cpp  TorreDeControl.h  main.cpp
MiRestaurante/: AprendizDeCocina.cpp  AprendizDeCocina.h  CMakeLists.txt  ConocimientosInsuficientes.h  Contenedor.h  JefeDeCocina.cpp  JefeDeCocina.h  Persona.cpp  Persona.h  Plato.cpp  Plato.h  Restaurante.cpp  Restaurante.h  main.cpp
inteligA_v2_ptoPartida/: CMakeLists.txt  Dron.cpp  Dron.h  DronAlquilado.cpp  DronAlquilado.h  DronAveriado.cpp  DronAveriado.h  ErrorReparacion.h  Paquete.cpp  Paquete.h  TorredeControl.cpp  TorredeControl.h  main.cpp
